# quic-torrent-client-server

./: .gitignore  CLIENT_DEPLOYMENT.md  Cargo.toml  DOCUMENTATION_INDEX.md  GITHUB_REPO_INFO.md  OUTPUT_TEST_README.md  PROJECT_DOCUMENTATION.md  QUICK_REFERENCE.md  README.md  REPO_README.md  TEST_FIXES_SUMMARY.md  USAGE.md  random_client_test.ps1  random_json_test.ps1  soak_test.ps1  test_ai_simple.rs  test_output.ps1  test_ubuntu_connection.ps1  verify_output_setup.ps1  view_server_logs.ps1  view_server_logs_secure.ps1  watch_server_logs.ps1
seed/: data.json.torrent  hello_world.txt.torrent  large.bin.torrent  log.txt.torrent  medium.bin.torrent  small.txt.torrent
seed_refs/: data.json  hello_world.txt  log.txt  small.txt
src/: ai_processor.rs  client.rs  console_client.rs  lib.rs  logger.rs  messages.rs  quic_client.rs  quic_tracker.rs  quic_utils.rs  work_distribution.rs
