[package]
name = "quic-torrent-client-server"
version = "0.1.0"
edition = "2021"
authors = ["Promethos AI"]
description = "QUIC-based BitTorrent tracker and client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Promethos-ai/quic-torrent-client-server"

[dependencies]
sha1 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
urlencoding = "2.1"
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rcgen = "0.11"

[[bin]]
name = "tracker"
path = "src/bin/tracker.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "random_json_test"
path = "src/bin/random_json_test.rs"




